COMMENTED ALMOST EVERYTHING, AND COMMENTED PLACES WHERE WE NEED TO IMPLEMENT CHANGES

--- a/project_data.json
+++ b/project_data.json
@@ -1,1 +1,1 @@
-{"owner":"CD5","projectType":"Road Construction","completed":true,"hoursSpent":700,"months":1,"price":503000.0}
+{"owner":"TEST","projectType":"TEST1","completed":true,"hoursSpent":2323,"months":9,"price":23230.0}
