refactored the project

--- a/project_data.json
+++ b/project_data.json
@@ -1,1 +1,1 @@
-{"owner":"TEST","projectType":"TEST1","completed":true,"hoursSpent":2323,"months":9,"price":23230.0}
+{"owner":"2328","projectType":"2388","completed":false,"hoursSpent":2388,"months":2388,"price":2388.0}
