--- a/project_data.json
+++ b/project_data.json
@@ -1,5 +1,1 @@
-<<<<<<< Updated upstream
-{"owner":"13223","projectType":"project","completed":false,"hoursSpent":239329,"months":8,"price":23923.0}
-=======
-{"owner":"Bob2","projectType":"Commercial","completed":false,"hoursSpent":150,"months":5,"price":200000.0}
->>>>>>> Stashed changes
+[{"owner":"Bob2","projectType":"Industrial","completed":true,"hoursSpent":200,"months":3,"price":150000.0},{"owner":"Bob3","projectType":"Industrial","completed":true,"hoursSpent":200,"months":3,"price":150000.0},{"owner":"lol","projectType":"new","completed":false,"hoursSpent":3,"months":3,"price":1.0},{"owner":"new","projectType":"new","completed":false,"hoursSpent":4,"months":5,"price":3.0},{"owner":"text","projectType":"text","completed":false,"hoursSpent":4,"months":44,"price":55.0},{"owner":"a","projectType":"a","completed":true,"hoursSpent":4,"months":4,"price":4.0}]
