--- a/project_data.json
+++ b/project_data.json
@@ -1,1 +1,232 @@
-[{"projectName":"works","projectType":"Commercial","completed":"False","hoursSpent":5,"timeline":5,"price":55.0,"kitchens":0,"otherRooms":0,"bathrooms":0,"buildType":"","projectSize":5,"floors":1,"facilityUsage":"","facilitySize":0,"length":0,"width":0,"bridges":0,"tunnels":0,"environmental":"","geographical":"","buildingUsage":"lol"},{"projectName":"industri","projectType":"Industrial","completed":"False","hoursSpent":4000,"timeline":30,"price":500000.0,"kitchens":0,"otherRooms":0,"bathrooms":0,"buildType":"","projectSize":0,"floors":0,"facilityUsage":"manufacturing plant","facilitySize":300,"length":0,"width":0,"bridges":0,"tunnels":0,"environmental":"","geographical":"","buildingUsage":""},{"projectName":"manufacturing plant","projectType":"Industrial","completed":"True","hoursSpent":3050,"timeline":30,"price":3500000.0,"kitchens":0,"otherRooms":0,"bathrooms":0,"buildType":"","projectSize":0,"floors":0,"facilityUsage":"manufacturing plant","facilitySize":300,"length":0,"width":0,"bridges":0,"tunnels":0,"environmental":"","geographical":"","buildingUsage":""},{"projectName":"resi1","projectType":"Residential","completed":"False","hoursSpent":1200,"timeline":9,"price":500000.0,"kitchens":1,"otherRooms":1,"bathrooms":1,"buildType":"New","projectSize":100,"floors":0,"facilityUsage":"","facilitySize":0,"length":0,"width":0,"bridges":0,"tunnels":0,"environmental":"","geographical":"","buildingUsage":""},{"projectName":"resi2","projectType":"Residential","completed":"True","hoursSpent":232323,"timeline":111,"price":2321.0,"kitchens":1,"otherRooms":1,"bathrooms":11,"buildType":"New","projectSize":4444,"floors":0,"facilityUsage":"","facilitySize":0,"length":0,"width":0,"bridges":0,"tunnels":0,"environmental":"","geographical":"","buildingUsage":""},{"projectName":"apartment","projectType":"Residential","completed":"True","hoursSpent":500,"timeline":12,"price":523022.0,"kitchens":1,"otherRooms":1,"bathrooms":1,"buildType":"Renovation","projectSize":250,"floors":0,"facilityUsage":"","facilitySize":0,"length":0,"width":0,"bridges":0,"tunnels":0,"environmental":"","geographical":"","buildingUsage":""},{"projectName":"roadtest","projectType":"Road Construction","completed":"True","hoursSpent":2500,"timeline":18,"price":2500000.0,"kitchens":0,"otherRooms":0,"bathrooms":0,"buildType":"","projectSize":0,"floors":0,"facilityUsage":"","facilitySize":0,"length":1000,"width":6,"bridges":0,"tunnels":0,"environmental":"wetlands","geographical":"test","buildingUsage":""},{"projectName":"road2","projectType":"Road Construction","completed":"False","hoursSpent":444,"timeline":18,"price":2333.0,"kitchens":0,"otherRooms":0,"bathrooms":0,"buildType":"","projectSize":0,"floors":0,"facilityUsage":"","facilitySize":0,"length":112,"width":11,"bridges":0,"tunnels":0,"environmental":"none","geographical":"none","buildingUsage":""},{"projectName":"test2","projectType":"Road Construction","completed":"False","hoursSpent":5,"timeline":5,"price":5.0,"kitchens":0,"otherRooms":0,"bathrooms":0,"buildType":"","projectSize":0,"floors":0,"facilityUsage":"","facilitySize":0,"length":5,"width":5,"bridges":55,"tunnels":5,"environmental":"5","geographical":"5","buildingUsage":""},{"projectName":"test","projectType":"Road Construction","completed":"False","hoursSpent":5,"timeline":18,"price":5.0,"kitchens":0,"otherRooms":0,"bathrooms":0,"buildType":"","projectSize":0,"floors":0,"facilityUsage":"","facilitySize":0,"length":5,"width":5,"bridges":55,"tunnels":5,"environmental":"4","geographical":"5","buildingUsage":""}]
+[
+  {
+    "projectName": "works",
+    "projectType": "Commercial",
+    "completed": "False",
+    "hoursSpent": 5,
+    "timeline": 5,
+    "price": 55.0,
+    "kitchens": 0,
+    "otherRooms": 0,
+    "bathrooms": 0,
+    "buildType": "",
+    "projectSize": 5,
+    "floors": 1,
+    "facilityUsage": "",
+    "facilitySize": 0,
+    "length": 0,
+    "width": 0,
+    "bridges": 0,
+    "tunnels": 0,
+    "environmental": "",
+    "geographical": "",
+    "buildingUsage": "lol"
+  },
+  {
+    "projectName": "industri",
+    "projectType": "Industrial",
+    "completed": "False",
+    "hoursSpent": 4000,
+    "timeline": 30,
+    "price": 500000.0,
+    "kitchens": 0,
+    "otherRooms": 0,
+    "bathrooms": 0,
+    "buildType": "",
+    "projectSize": 0,
+    "floors": 0,
+    "facilityUsage": "manufacturing plant",
+    "facilitySize": 300,
+    "length": 0,
+    "width": 0,
+    "bridges": 0,
+    "tunnels": 0,
+    "environmental": "",
+    "geographical": "",
+    "buildingUsage": ""
+  },
+  {
+    "projectName": "manufacturing plant",
+    "projectType": "Industrial",
+    "completed": "True",
+    "hoursSpent": 3050,
+    "timeline": 30,
+    "price": 3500000.0,
+    "kitchens": 0,
+    "otherRooms": 0,
+    "bathrooms": 0,
+    "buildType": "",
+    "projectSize": 0,
+    "floors": 0,
+    "facilityUsage": "manufacturing plant",
+    "facilitySize": 300,
+    "length": 0,
+    "width": 0,
+    "bridges": 0,
+    "tunnels": 0,
+    "environmental": "",
+    "geographical": "",
+    "buildingUsage": ""
+  },
+  {
+    "projectName": "resi1",
+    "projectType": "Residential",
+    "completed": "False",
+    "hoursSpent": 1200,
+    "timeline": 9,
+    "price": 500000.0,
+    "kitchens": 1,
+    "otherRooms": 1,
+    "bathrooms": 1,
+    "buildType": "New",
+    "projectSize": 100,
+    "floors": 0,
+    "facilityUsage": "",
+    "facilitySize": 0,
+    "length": 0,
+    "width": 0,
+    "bridges": 0,
+    "tunnels": 0,
+    "environmental": "",
+    "geographical": "",
+    "buildingUsage": ""
+  },
+  {
+    "projectName": "resi2",
+    "projectType": "Residential",
+    "completed": "True",
+    "hoursSpent": 232323,
+    "timeline": 111,
+    "price": 2321.0,
+    "kitchens": 1,
+    "otherRooms": 1,
+    "bathrooms": 11,
+    "buildType": "New",
+    "projectSize": 4444,
+    "floors": 0,
+    "facilityUsage": "",
+    "facilitySize": 0,
+    "length": 0,
+    "width": 0,
+    "bridges": 0,
+    "tunnels": 0,
+    "environmental": "",
+    "geographical": "",
+    "buildingUsage": ""
+  },
+  {
+    "projectName": "apartment",
+    "projectType": "Residential",
+    "completed": "True",
+    "hoursSpent": 500,
+    "timeline": 12,
+    "price": 523022.0,
+    "kitchens": 1,
+    "otherRooms": 1,
+    "bathrooms": 1,
+    "buildType": "Renovation",
+    "projectSize": 250,
+    "floors": 0,
+    "facilityUsage": "",
+    "facilitySize": 0,
+    "length": 0,
+    "width": 0,
+    "bridges": 0,
+    "tunnels": 0,
+    "environmental": "",
+    "geographical": "",
+    "buildingUsage": ""
+  },
+  {
+    "projectName": "roadtest",
+    "projectType": "Road Construction",
+    "completed": "True",
+    "hoursSpent": 2500,
+    "timeline": 18,
+    "price": 2500000.0,
+    "kitchens": 0,
+    "otherRooms": 0,
+    "bathrooms": 0,
+    "buildType": "",
+    "projectSize": 0,
+    "floors": 0,
+    "facilityUsage": "",
+    "facilitySize": 0,
+    "length": 1000,
+    "width": 6,
+    "bridges": 0,
+    "tunnels": 0,
+    "environmental": "wetlands",
+    "geographical": "test",
+    "buildingUsage": ""
+  },
+  {
+    "projectName": "road2",
+    "projectType": "Road Construction",
+    "completed": "False",
+    "hoursSpent": 444,
+    "timeline": 18,
+    "price": 2333.0,
+    "kitchens": 0,
+    "otherRooms": 0,
+    "bathrooms": 0,
+    "buildType": "",
+    "projectSize": 0,
+    "floors": 0,
+    "facilityUsage": "",
+    "facilitySize": 0,
+    "length": 112,
+    "width": 11,
+    "bridges": 0,
+    "tunnels": 0,
+    "environmental": "none",
+    "geographical": "none",
+    "buildingUsage": ""
+  },
+  {
+    "projectName": "test2",
+    "projectType": "Road Construction",
+    "completed": "False",
+    "hoursSpent": 5,
+    "timeline": 5,
+    "price": 5.0,
+    "kitchens": 0,
+    "otherRooms": 0,
+    "bathrooms": 0,
+    "buildType": "",
+    "projectSize": 0,
+    "floors": 0,
+    "facilityUsage": "",
+    "facilitySize": 0,
+    "length": 5,
+    "width": 5,
+    "bridges": 55,
+    "tunnels": 5,
+    "environmental": "5",
+    "geographical": "5",
+    "buildingUsage": ""
+  },
+  {
+    "projectName": "test",
+    "projectType": "Road Construction",
+    "completed": "False",
+    "hoursSpent": 5,
+    "timeline": 18,
+    "price": 5.0,
+    "kitchens": 0,
+    "otherRooms": 0,
+    "bathrooms": 0,
+    "buildType": "",
+    "projectSize": 0,
+    "floors": 0,
+    "facilityUsage": "",
+    "facilitySize": 0,
+    "length": 5,
+    "width": 5,
+    "bridges": 55,
+    "tunnels": 5,
+    "environmental": "4",
+    "geographical": "5",
+    "buildingUsage": ""
+  }
+]
